@@ -4,7 +4,7 @@
     <meta name="description" content="Free open-source tool for logging, mapping, calculating and sharing your flights and trips.">
     <meta name="keywords" content="flight,memory,logging,mapping,statistics,sharing">
     <link rel="stylesheet" href="/css/style_reset.css" type="text/css">
-    <link rel="stylesheet" href="/openflights.css?version=20081127" type="text/css">
+    <link rel="stylesheet" href="/openflights.css?version=20081130" type="text/css">
     <link rel="stylesheet" href="/css/sortable.css" type="text/css">
     <link rel="icon" type="image/png" href="/img/icon_favicon.png"/>
     <script type="text/javascript" src="/OpenLayers.js"></script>
@@ -98,13 +98,13 @@
 		<table>
 		<tr>
 		  <td>Trips<sup><a href="#help" onclick='JavaScript:help("trip")'>?</a></sup></td>
-		  <td><span id="filter_tripselect"><select name="Trips"><option value="">All trips</option></select></span>
+		  <td><span id="filter_tripselect"><select class="filter" name="Trips"><option value="">All trips</option></select></span>
 		</tr><tr>
 		  <td>Airlines&nbsp;</td>
-		  <td><span id="filter_airlineselect"><select name="Airlines"><option value="">All airlines</option></select></span>
+		  <td><span id="filter_airlineselect"><select class="filter" name="Airlines"><option value="">All airlines</option></select></span>
 		</tr><tr>
 		  <td>Year</td>
-		  <td><span id="filter_yearselect"><select name="Years"><option value="">All</option></select></span></td>
+		  <td><span id="filter_yearselect"><select class="filter" name="Years"><option value="">All</option></select></span></td>
 	        </tr>
 	      </table>
 	      </span>
